<resources>
    <string name="app_name">Recorderis</string>
    <string name="app_version">Version 1.0</string>
    <string name="hint_top">(Tap here when you finish)</string>
    <string name="hint_mid">Enter ONLY the Expiration Dates of the DOCUMENT you own</string>
    <string name="hint_bot">(Tap anywhere to continue)</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_selection">Selection</string>
    <string name="nav_info">About</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="logout">Logout</string>
    <string name="doc_rtm">Technical Mechanical Review</string>
    <string name="doc_src">Civil Liability Insurance</string>
    <string name="doc_str">All Risk Insurance</string>
    <string name="doc_soat">SOAT</string>
    <string name="doc_tao">Operation Card</string>
    <string name="doc_imp">Bearing tax</string>
    <string name="doc_ext">Fire Extinguisher</string>
    <string name="privacy_policy_link">Privacy Policy</string>
    <string name="terms_link">Terms and Conditions</string>
    <string name="auth0_client_id">28BCzzh69tSn8aWrbZvZmJSgExSUrH4W</string>
    <string name="auth0_domain">ispam.auth0.com</string>
    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>
    <string name="login_success">Log In - Succes</string>
    <string name="login_error">Log In - Error</string>
    <string name="login_canceled">Log In - Canceled</string>
    <string name="automatic_login_success">Automatic Login Success</string>
    <string name="session_expired">Session Expired, Please Log In</string>
    <string name="profile_request_failed">Profile Request Failed</string>
    <string name="need_email">We Need an Email Please</string>
    <string name="need_date">We Need A DATE</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="info_form">Enter ONLY the Expiration Dates of the DOCUMENT you own</string>
    <string name="hint_date">DD/MM/YYYY</string>
    <string name="soat_text">El Seguro Obligatorio de Accidentes de Tránsito – SOAT, es un contrato de seguro fundamentado en un principio social, que busca garantizar la atención inmediata e integral de todas las víctimas de accidentes de tránsito ocurridos en las vías del país.\n
        \n
Recuerde que TODAS las instituciones prestadoras de salud, tienen la obligación de dar atención prioritaria a las víctimas de un accidente de tránsito y advertir al consumidor que la reclamación de la indemnización la puede realizar directamente. Asimismo, no requiere apoderados o intermediarios.</string>
</resources>