<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_input_delete"
            android:title="@string/nav_home"></item>
        <item
            android:id="@+id/nav_selection"
            android:icon="@drawable/cast_ic_stop_circle_filled_grey600"
            android:title="@string/nav_selection"></item>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/cast_ic_mini_controller_pause_large"
            android:title="@string/nav_settings"></item>

    </group>

    <item android:title="@string/nav_info"
        android:id="@+id/about">
        <menu>
            <group android:checkableBehavior="single">
            <item android:title="@string/privacy_policy_link"
                android:id="@+id/nav_privacy_policy"></item>
            <item android:title="@string/terms_link"
                android:id="@+id/nav_terms"></item>
            </group>
        </menu>
    </item>
</menu>