<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_opacy">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:rotation="330"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/hint_top"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_bot"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_mid"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>